<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <TextView
        android:id="@+id/textViewCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textCalc" />

    <ImageView
        android:id="@+id/imgCalculadora"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/calculator" />

    <TextView
        android:id="@+id/textViewCurr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textCurr" />

    <ImageView
        android:id="@+id/imgCambioCurr"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/currency" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textName" />




</LinearLayout>