<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginTop="60dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textTipoCambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textTipoCambio" />

        <EditText
            android:id="@+id/editTipoCambio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:text="25" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editMXNinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="5"
            android:inputType="numberDecimal"
            android:text="130" />

        <TextView
            android:id="@+id/textMXNtoUSD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textMXNtoUSD" />

    </LinearLayout>

    <Button
        android:id="@+id/calcCurrButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcCurrButton" />

    <TextView
        android:id="@+id/textShowCalcCurr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0" />




</LinearLayout>